--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -12,6 +12,15 @@
         android:textAllCaps="false"
         android:textSize="18sp"
         android:gravity="center"
+        android:text="BasketBall"
+        android:onClick="basketBall"
+        android:layout_width="match_parent"
+        android:layout_height="45dp" />
+
+    <Button
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:gravity="center"
         android:text="motion1"
         android:onClick="motion1"
         android:layout_width="match_parent"
@@ -21,12 +30,10 @@
         android:textAllCaps="false"
         android:textSize="18sp"
         android:gravity="center"
-        android:text="BasketBall"
-        android:onClick="basketBall"
+        android:text="motion2"
+        android:onClick="motion2"
         android:layout_width="match_parent"
         android:layout_height="45dp" />
-
-
 
 
 </LinearLayout>
